--- a/package.json
+++ b/package.json
@@ -6,24 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "11.2.10",
     "lucide-react": "0.468.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.5",
     "next-seo": "6.6.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.48.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "24.3.0",
     "@types/react": "19.1.11",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "8.4.41",
+    "prisma": "^5.22.0",
     "tailwindcss": "3.4.10",
+    "tsx": "^4.7.0",
     "typescript": "5.5.4"
   }
 }
