--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.48.2",
+    "recharts": "^3.1.2",
+    "resend": "^6.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
