--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.22.0",
+    "@supabase/supabase-js": "^2.56.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "11.2.10",
     "lucide-react": "0.468.0",
