--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "resend": "^6.0.1",
     "zod": "^3.22.4"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "24.3.0",
