Fix Netlify deployment - disable Next.js plugin and use static site

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,20 @@
 [build]
-  command = "echo 'Static site ready'"
+  command = "chmod +x build-static.sh && ./build-static.sh"
   publish = "public"
+
+[build.processing]
+  skip_processing = false
+
+[build.processing.css]
+  bundle = false
+  minify = false
+
+[build.processing.js]
+  bundle = false
+  minify = false
+
+[build.processing.html]
+  pretty_urls = true
 
 [[redirects]]
   from = "/*"
