Update domain to prep-academy.netlify.app

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,10 @@
   command = "chmod +x build-static.sh && ./build-static.sh"
   publish = "public"
 
+[build.environment]
+  NEXTAUTH_URL = "https://prep-academy.netlify.app"
+  NEXTAUTH_SECRET = "nuet-prep-academy-secret-key-2024"
+
 [build.processing]
   skip_processing = false
 
