Create separate static site directory to avoid Next.js plugin conflict

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "echo 'Static site ready'"
-  publish = "public"
+  command = "cd static-site && npm run build"
+  publish = "static-site"
 
 [build.environment]
   NEXTAUTH_URL = "https://prep-academy.netlify.app"
