--- a/static-site/package.json
+++ b/static-site/package.json
@@ -4,7 +4,7 @@
   "description": "NUET Prep Academy - Static Website",
   "main": "index.html",
   "scripts": {
-    "build": "echo 'Static site ready'"
+    "build": "node build.js"
   },
   "keywords": ["static", "website", "nuet"],
   "author": "NUET Prep Academy",
