Create complete Next.js plugin compatibility structure with server.js

--- a/static-site/package.json
+++ b/static-site/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": ["static", "website", "nuet"],
   "author": "NUET Prep Academy",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.0"
+  }
 }
