--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "env": {
-    "NEXTAUTH_URL": "https://nuet-prep-academy.vercel.app",
-    "NEXTAUTH_SECRET": "nuet-prep-academy-secret-key-2024",
-    "NODE_ENV": "production"
-  }
+  "buildCommand": "echo 'Static site ready'",
+  "outputDirectory": "public",
+  "framework": null,
+  "installCommand": "echo 'No dependencies needed'"
 }
